# marsbots_core

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  bot.py  docker-compose.yml  entrypoint.sh  pyproject.toml  run.sh  setup.py  setup.sh
bots/: testbot.json
examples/: character_bot.py
examples/chatbot/: .env.example  chatbot.json  chatbot.py  prompts.py
examples/examplebot/: examplebot.json  examplebot.py  examplebot2.py
marsbots/: __init__.py  bot.py  config.py  constants.py  discord_utils.py  exceptions.py  language_models.py  models.py  settings_manager.py  text_postprocessors.py  util.py
marsbots-old/: checks.py
marsbots/capabilities/: character.py
marsbots/cogs/: helpercog.py
marsbots/programs/: eden_artgen.py  ifttt.py  lm.py
marsbots/resources/: language_models.py
marsbots_core/: bot.py  config.py  constants.py  maincog.py  models.py  util.py
marsbots_core/marsbots/test/: testbot.json  testbot2.json
marsbots_core/marsbots/test/cogs/: testcog.py
marsbots_core/programs/: eden_artgen.py  hey.py  ifttt.py  lm.py
marsbots_core/resources/: discord_utils.py  language_models.py  modifiers.py  settings_manager.py
testbots/testbot/: testcog.py
